--- a/views/templates/login.html.twig
+++ b/views/templates/login.html.twig
@@ -11,12 +11,12 @@ Miaou | Connexion
     {% endblock %}
 <main>
     <section id="login" class="login-content">
-        <h2>Se connecter au site Miaou</h2>
+        <h2 class="sr-only">Se connecter au site Miaou</h2>
         <article id="login-form" class="form">
             <h3>Pour vous connecter :</br> authentifiez-vous</h3>
             <form action="index.php?route=check-login" method="POST">
                 <div class="container-login">
-                    <legend>Pour vous connecter : authentifiez-vous</legend>
+                    <legend class="sr-only">Pour vous connecter : authentifiez-vous</legend>
 
                     <label for="email">Email :</label>
                     <input type="email"
