--- a/public/assets/styles/css/style.css
+++ b/public/assets/styles/css/style.css
@@ -176,9 +176,18 @@
   pointer-events: none;
 }
 
-@media (max-width: 575px) {
+@media (max-width: 430px) {
   .header-actions .action-button span {
     display: none;
+  }
+  .header-actions .action-button {
+    padding: 0.6rem;
+    min-width: auto;
+  }
+}
+@media (min-width: 431px) {
+  .header-actions .action-button span {
+    display: inline;
   }
   .header-actions .action-button {
     padding: 0.6rem;
@@ -706,7 +715,7 @@ main {
   border-radius: 50% 50% 50% 50%/30% 30% 70% 70%;
 }
 
-@media (max-width: 575px) {
+@media (min-width: 431px) {
   .cat {
     height: 60%;
   }
@@ -1311,7 +1320,7 @@ main {
 .homepage-content {
   /* ✅ Ajout pour mobile : marges latérales */
 }
-@media (max-width: 575px) {
+@media (min-width: 431px) {
   .homepage-content {
     margin: 2vh 1rem;
     width: calc(100% - 2rem);
@@ -1347,6 +1356,268 @@ main {
   .homepage-content .auth {
     max-width: 1400px;
     padding: 4rem;
+  }
+}
+
+.login-content {
+  margin: 0 auto;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  flex: 1;
+  position: relative;
+  min-height: 50vh;
+}
+@media (min-width: 768px) {
+  .login-content {
+    min-height: 40vh;
+  }
+}
+@media (min-width: 850px) {
+  .login-content {
+    min-height: 40vh;
+  }
+}
+@media (min-width: 992px) {
+  .login-content {
+    min-height: 40vh;
+  }
+}
+@media (min-width: 1100px) {
+  .login-content {
+    min-height: 40vh;
+  }
+}
+@media (min-width: 1200px) {
+  .login-content {
+    min-height: 40vh;
+  }
+}
+@media (min-width: 1400px) {
+  .login-content {
+    min-height: 40vh;
+  }
+}
+@media (min-width: 1600px) {
+  .login-content {
+    min-height: 40vh;
+  }
+}
+@media (min-width: 2000px) {
+  .login-content {
+    min-height: 40vh;
+  }
+}
+.login-content::before {
+  content: "";
+  background-image: url("../../img/Miaou/backgroundMain.png");
+  background-size: cover;
+  opacity: 0.6;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+@media (max-width: 430px) {
+  #login {
+    padding-top: 0vh;
+    margin-top: 0;
+    position: relative;
+    width: 100%;
+    min-height: 100vh;
+    padding-inline: 1rem;
+    box-sizing: border-box;
+    z-index: 980;
+    background-color: transparent;
+  }
+  #login::before {
+    content: "";
+    background-size: cover;
+    position: absolute;
+    inset: 0;
+    z-index: -1;
+    max-width: 400px;
+  }
+  #login .sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
+  }
+  #login {
+    margin: 0 auto;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    min-height: 50vh;
+  }
+}
+@media (max-width: 430px) and (min-width: 768px) {
+  #login {
+    min-height: 40vh;
+  }
+}
+@media (max-width: 430px) and (min-width: 850px) {
+  #login {
+    min-height: 40vh;
+  }
+}
+@media (max-width: 430px) and (min-width: 992px) {
+  #login {
+    min-height: 40vh;
+  }
+}
+@media (max-width: 430px) and (min-width: 1100px) {
+  #login {
+    min-height: 40vh;
+  }
+}
+@media (max-width: 430px) and (min-width: 1200px) {
+  #login {
+    min-height: 40vh;
+  }
+}
+@media (max-width: 430px) and (min-width: 1400px) {
+  #login {
+    min-height: 40vh;
+  }
+}
+@media (max-width: 430px) and (min-width: 1600px) {
+  #login {
+    min-height: 40vh;
+  }
+}
+@media (max-width: 430px) and (min-width: 2000px) {
+  #login {
+    min-height: 40vh;
+  }
+}
+#login-form {
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#login-form h3 {
+  background-color: #5C5454;
+  color: white;
+  text-align: center;
+  border-radius: 15px 15px 0 0;
+  font-size: clamp(1rem, 3vw, 1.2rem);
+  width: 100%;
+  max-width: 90vw;
+  min-height: 40px;
+  margin: 0 auto;
+  padding: 1vh 1vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+}
+#login-form .container-login {
+  background-image: url("../../img/Miaou/chatAuth.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  max-width: 90vw;
+  min-height: 50vh;
+  max-height: 400px;
+  margin: 0 auto;
+  padding: 2vh 1vw;
+  border: 2px solid #5C5454;
+  border-radius: 0 0 15px 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+}
+#login-form label {
+  margin-bottom: 0.3rem;
+  font-size: 0.9rem;
+}
+#login-form input[type=email],
+#login-form input[type=password],
+#login-form input[type=text] {
+  width: 98%;
+  max-width: 300px;
+  height: 5vh;
+  min-height: 35px;
+  border-radius: 25px;
+  background-color: rgba(255, 255, 255, 0.8);
+  margin: 1vh auto;
+  padding: 0 2.2rem 0 1rem;
+  font-size: 0.9rem;
+  box-sizing: border-box;
+}
+#login-form .password-container {
+  position: relative;
+  width: 100%;
+  max-width: 300px;
+}
+#login-form .password-container .eyes {
+  position: absolute;
+  right: 0.8rem;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+  color: #666;
+  font-size: 1.1rem;
+  pointer-events: auto;
+}
+#login-form input[type=submit] {
+  width: 70%;
+  max-width: 250px;
+  height: 6vh;
+  min-height: 40px;
+  margin: 2vh auto;
+  border-radius: 25px;
+  font-size: 1rem;
+  font-weight: bold;
+  background-color: #5C5454;
+  color: white;
+  cursor: pointer;
+  border: none;
+}
+
+@media (max-width: 430px) {
+  #login-form h3 {
+    max-width: 400px;
+  }
+  #login-form .container-login {
+    max-width: 400px;
+    max-height: 400px;
+  }
+}
+@media (min-width: 768px) {
+  #login-form h3, #login-form .container-login {
+    max-width: 400px;
+  }
+}
+@media (min-width: 992px) {
+  #login-form h3, #login-form .container-login {
+    max-width: 400px;
+  }
+}
+@media (min-width: 1600px) {
+  #login-form h3, #login-form .container-login {
+    max-width: 400px;
+  }
+}
+@media (min-width: 2000px) {
+  #login-form h3, #login-form .container-login {
+    max-width: 400px;
   }
 }
 
